--- a/src/main/resources/fxml/Home.fxml
+++ b/src/main/resources/fxml/Home.fxml
@@ -7,87 +7,35 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import org.controlsfx.control.ToggleSwitch?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
    <top>
        <AnchorPane prefHeight="50" style="-fx-background-color: #e5e5e5;">
-           <Button layoutX="526.0" layoutY="13.0" mnemonicParsing="false" text="Connect" AnchorPane.leftAnchor="526.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="13.0" />
+           <Button layoutX="510.0" layoutY="13.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="76.0" text="Connect" AnchorPane.rightAnchor="14.0" />
          <ChoiceBox layoutX="166.0" layoutY="13.0" prefHeight="25.0" prefWidth="269.0" AnchorPane.leftAnchor="166.0" AnchorPane.rightAnchor="165.0" />
-         <ToggleSwitch layoutX="14.0" layoutY="15.0" prefHeight="20.0" prefWidth="71.0" text="Power  " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="516.0" />
+         <ToggleButton layoutX="14.0" layoutY="12.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="74.0" text="Power" AnchorPane.leftAnchor="14.0" />
        </AnchorPane>
    </top>
    <center>
        <AnchorPane prefHeight="213.0" prefWidth="602.0" BorderPane.alignment="CENTER">
-           <GridPane layoutX="65.0" layoutY="25.0" prefHeight="30.0" prefWidth="473.0">
-               <columnConstraints>
-                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="51.0" />
-                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="283.0" minWidth="10.0" prefWidth="283.0" />
-                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="29.0" />
-               </columnConstraints>
-               <rowConstraints>
-                   <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                   <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <Label text="Darker" GridPane.halignment="RIGHT">
-                   <GridPane.margin>
-                       <Insets right="10.0" />
-                   </GridPane.margin>
-               </Label>
-               <Slider GridPane.columnIndex="1" />
-               <Label text="Brighter" GridPane.columnIndex="2">
-                   <GridPane.margin>
-                       <Insets left="5.0" />
-                   </GridPane.margin>
-               </Label>
-               <Label text="Brightness" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-           </GridPane>
-         <GridPane layoutX="65.0" layoutY="105.0" prefHeight="30.0" prefWidth="473.0">
-            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="51.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="283.0" minWidth="10.0" prefWidth="283.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="29.0" />
-            </columnConstraints>
-            <rowConstraints>
-               <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-               <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-               <Label text="Warmer" GridPane.halignment="RIGHT">
-                  <GridPane.margin>
-                     <Insets right="10.0" />
-                  </GridPane.margin>
-               </Label>
-               <Slider GridPane.columnIndex="1" />
-               <Label text="Cooler" GridPane.columnIndex="2">
-                  <GridPane.margin>
-                     <Insets left="5.0" />
-                  </GridPane.margin>
-               </Label>
-               <Label text="Color control / Reading mode" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-            </children>
-         </GridPane>
-         <GridPane layoutX="65.0" layoutY="153.0" prefHeight="43.0" prefWidth="473.0">
-            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="51.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="283.0" minWidth="10.0" prefWidth="283.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="29.0" />
-            </columnConstraints>
-            <rowConstraints>
-               <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-               <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-               <Label text="Color control / Free mode" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-               <ColorPicker prefHeight="25.0" prefWidth="276.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            </children>
-         </GridPane>
-       </AnchorPane>
+         <children>
+            <Label layoutX="102.0" layoutY="25.0" text="Darker" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="25.0" />
+            <Slider layoutX="168.0" layoutY="26.0" prefHeight="16.0" prefWidth="267.0" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="168.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="26.0" />
+            <Label layoutX="447.0" layoutY="25.0" text="Brighter" AnchorPane.bottomAnchor="168.0" AnchorPane.rightAnchor="103.0" AnchorPane.topAnchor="25.0" />
+            <Label alignment="CENTER" layoutX="267.0" layoutY="42.0" text="Brightness" AnchorPane.bottomAnchor="151.0" AnchorPane.leftAnchor="235.0" AnchorPane.rightAnchor="232.0" AnchorPane.topAnchor="42.0" />
+            <Label layoutX="102.0" layoutY="105.0" text="Warmer" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="105.0" />
+            <Slider layoutX="172.0" layoutY="106.0" prefHeight="16.0" prefWidth="267.0" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="172.0" AnchorPane.rightAnchor="161.0" AnchorPane.topAnchor="106.0" />
+            <Label alignment="CENTER" layoutX="239.0" layoutY="124.0" text="Color / Reading mode" AnchorPane.bottomAnchor="69.0" AnchorPane.leftAnchor="239.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="124.0" />
+            <Label layoutX="452.0" layoutY="105.0" text="Cooler" AnchorPane.bottomAnchor="88.0" AnchorPane.rightAnchor="107.0" AnchorPane.topAnchor="105.0" />
+            <ColorPicker layoutX="175.0" layoutY="148.0" maxHeight="27.0" maxWidth="262.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="262.0" scaleShape="false" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="163.0" />
+            <Label alignment="CENTER" layoutX="251.0" layoutY="175.0" text="Color / Free mode" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="251.0" AnchorPane.rightAnchor="239.0" />
+         </children></AnchorPane>
    </center>
    <bottom>
       <TitledPane animated="false" collapsible="false" prefHeight="140.0" prefWidth="602.0" text="Device details" BorderPane.alignment="CENTER">
