--- a/src/main/resources/fxml/Home.fxml
+++ b/src/main/resources/fxml/Home.fxml
@@ -1,82 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ColorPicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
-   <top>
-       <AnchorPane prefHeight="50" style="-fx-background-color: #e5e5e5;">
-           <Button layoutX="510.0" layoutY="13.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="76.0" text="Connect" AnchorPane.rightAnchor="14.0" />
-         <ChoiceBox layoutX="166.0" layoutY="13.0" prefHeight="25.0" prefWidth="269.0" AnchorPane.leftAnchor="166.0" AnchorPane.rightAnchor="165.0" />
-         <ToggleButton layoutX="14.0" layoutY="12.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="74.0" text="Power" AnchorPane.leftAnchor="14.0" />
-       </AnchorPane>
-   </top>
-   <center>
-       <AnchorPane prefHeight="213.0" prefWidth="602.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="102.0" layoutY="25.0" text="Darker" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="25.0" />
-            <Slider layoutX="168.0" layoutY="26.0" prefHeight="16.0" prefWidth="267.0" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="168.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="26.0" />
-            <Label layoutX="447.0" layoutY="25.0" text="Brighter" AnchorPane.bottomAnchor="168.0" AnchorPane.rightAnchor="103.0" AnchorPane.topAnchor="25.0" />
-            <Label alignment="CENTER" layoutX="267.0" layoutY="42.0" text="Brightness" AnchorPane.bottomAnchor="151.0" AnchorPane.leftAnchor="235.0" AnchorPane.rightAnchor="232.0" AnchorPane.topAnchor="42.0" />
-            <Label layoutX="102.0" layoutY="105.0" text="Warmer" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="105.0" />
-            <Slider layoutX="172.0" layoutY="106.0" prefHeight="16.0" prefWidth="267.0" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="172.0" AnchorPane.rightAnchor="161.0" AnchorPane.topAnchor="106.0" />
-            <Label alignment="CENTER" layoutX="239.0" layoutY="124.0" text="Color / Reading mode" AnchorPane.bottomAnchor="69.0" AnchorPane.leftAnchor="239.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="124.0" />
-            <Label layoutX="452.0" layoutY="105.0" text="Cooler" AnchorPane.bottomAnchor="88.0" AnchorPane.rightAnchor="107.0" AnchorPane.topAnchor="105.0" />
-            <ColorPicker layoutX="175.0" layoutY="148.0" maxHeight="27.0" maxWidth="262.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="262.0" scaleShape="false" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="163.0" />
-            <Label alignment="CENTER" layoutX="251.0" layoutY="175.0" text="Color / Free mode" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="251.0" AnchorPane.rightAnchor="239.0" />
-         </children></AnchorPane>
-   </center>
-   <bottom>
-      <TitledPane animated="false" collapsible="false" prefHeight="140.0" prefWidth="602.0" text="Device details" BorderPane.alignment="CENTER">
-         <content>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="controllers.HomeController">
+    <top>
+        <AnchorPane prefHeight="50" style="-fx-background-color: #e5e5e5;">
+            <Button layoutX="510.0" layoutY="13.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="76.0"
+                    text="Connect" AnchorPane.rightAnchor="14.0"/>
+            <ChoiceBox layoutX="166.0" layoutY="13.0" prefHeight="25.0" prefWidth="269.0" AnchorPane.leftAnchor="166.0"
+                       AnchorPane.rightAnchor="165.0"/>
+            <ToggleButton layoutX="14.0" layoutY="12.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="74.0"
+                          text="Power" AnchorPane.leftAnchor="14.0"/>
+        </AnchorPane>
+    </top>
+    <center>
+        <AnchorPane prefHeight="213.0" prefWidth="602.0" BorderPane.alignment="CENTER">
+            <Label layoutX="102.0" layoutY="25.0" text="Darker" AnchorPane.bottomAnchor="168.0"
+                   AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="25.0"/>
+            <Slider layoutX="168.0" layoutY="26.0" prefHeight="16.0" prefWidth="267.0"
+                    AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="168.0" AnchorPane.rightAnchor="165.0"
+                    AnchorPane.topAnchor="26.0"/>
+            <Label layoutX="447.0" layoutY="25.0" text="Brighter" AnchorPane.bottomAnchor="168.0"
+                   AnchorPane.rightAnchor="103.0" AnchorPane.topAnchor="25.0"/>
+            <Label alignment="CENTER" layoutX="267.0" layoutY="42.0" text="Brightness"
+                   AnchorPane.bottomAnchor="151.0" AnchorPane.leftAnchor="235.0" AnchorPane.rightAnchor="232.0"
+                   AnchorPane.topAnchor="42.0"/>
+            <Label layoutX="99.0" layoutY="97.0" text="Warmer" AnchorPane.bottomAnchor="96.0"
+                   AnchorPane.leftAnchor="99.0" AnchorPane.topAnchor="97.0"/>
+            <Slider layoutX="167.0" layoutY="97.0" prefHeight="16.0" prefWidth="267.0"
+                    AnchorPane.bottomAnchor="97.0" AnchorPane.leftAnchor="167.0" AnchorPane.rightAnchor="166.0"
+                    AnchorPane.topAnchor="97.0"/>
+            <Label alignment="CENTER" layoutX="240.0" layoutY="114.0" text="Color / Reading mode"
+                   AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="227.0"
+                   AnchorPane.topAnchor="114.0"/>
+            <Label layoutX="458.0" layoutY="97.0" text="Cooler" AnchorPane.bottomAnchor="96.0"
+                   AnchorPane.rightAnchor="107.0" AnchorPane.topAnchor="97.0"/>
+            <ColorPicker layoutX="175.0" layoutY="148.0" maxHeight="27.0" maxWidth="262.0" minHeight="-Infinity"
+                         minWidth="-Infinity" prefHeight="27.0" prefWidth="262.0" scaleShape="false"
+                         AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="175.0"
+                         AnchorPane.rightAnchor="163.0"/>
+            <Label alignment="CENTER" layoutX="251.0" layoutY="175.0" text="Color / Free mode"
+                   AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="251.0" AnchorPane.rightAnchor="239.0"/>
+        </AnchorPane>
+    </center>
+    <bottom>
+        <TitledPane animated="false" collapsible="false" prefHeight="140.0" prefWidth="602.0" text="Device details"
+                    BorderPane.alignment="CENTER">
             <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="285.0" minWidth="10.0" prefWidth="74.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="474.0" minWidth="10.0" prefWidth="224.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="519.0" minWidth="10.0" prefWidth="226.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="519.0" minWidth="10.0" prefWidth="72.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="WiFi:" GridPane.halignment="RIGHT">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="System:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="210.0" text="WiFi Settings" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin></Button>
-                  <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="212.0" text="Reboot / Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-                     <GridPane.margin>
-                        <Insets left="10.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Label prefHeight="17.0" prefWidth="505.0" text="Unknown" GridPane.columnIndex="1" GridPane.columnSpan="3" />
-                  <Label prefHeight="17.0" prefWidth="510.0" text="Unknown" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1" />
-               </children>
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="285.0" minWidth="10.0" prefWidth="74.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="474.0" minWidth="10.0" prefWidth="165.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="519.0" minWidth="10.0" prefWidth="173.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="519.0" minWidth="10.0" prefWidth="167.0"/>
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                </rowConstraints>
+                <Label text="WiFi:" GridPane.halignment="RIGHT">
+                    <GridPane.margin>
+                        <Insets right="10.0"/>
+                    </GridPane.margin>
+                </Label>
+                <Label text="System:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                    <GridPane.margin>
+                        <Insets right="10.0"/>
+                    </GridPane.margin>
+                </Label>
+                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="165.0" text="WiFi Settings"
+                        GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                    <GridPane.margin>
+                        <Insets right="10.0"/>
+                    </GridPane.margin>
+                </Button>
+                <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="212.0" text="Reboot / Reset"
+                        GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                    <GridPane.margin>
+                        <Insets right="10.0"/>
+                    </GridPane.margin>
+                </Button>
+                <Label prefHeight="17.0" prefWidth="505.0" text="Unknown" GridPane.columnIndex="1"
+                       GridPane.columnSpan="3"/>
+                <Label prefHeight="17.0" prefWidth="510.0" text="Unknown" GridPane.columnIndex="1"
+                       GridPane.columnSpan="3" GridPane.rowIndex="1"/>
+                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="169.0" text="About this app"
+                        GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                    <GridPane.margin>
+                        <Insets right="15.0"/>
+                    </GridPane.margin>
+                </Button>
             </GridPane>
-         </content>
-      </TitledPane>
-   </bottom>
+        </TitledPane>
+    </bottom>
 </BorderPane>
