--- a/src/main/resources/fxml/About.fxml
+++ b/src/main/resources/fxml/About.fxml
@@ -4,15 +4,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="200" prefWidth="300" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AboutController">
-   <children>
-      <Label alignment="TOP_LEFT" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="102.0" prefWidth="278.0" text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;" wrapText="true" />
-      <Button layoutX="239.0" layoutY="161.0" mnemonicParsing="false" text="Okay" />
-      <Label layoutX="14.0" layoutY="127.0" prefHeight="25.0" prefWidth="264.0" text="Hope it can try to light up the dark">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="200" prefWidth="300"
+            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="controllers.AboutController">
+    <Label alignment="TOP_LEFT" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="102.0" prefWidth="278.0"
+           text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;"
+           wrapText="true"/>
+    <Button fx:id="okayButton" layoutX="239.0" layoutY="161.0" mnemonicParsing="false" text="Okay"
+            onAction="#handleOkayButton"/>
+    <Label layoutX="14.0" layoutY="127.0" prefHeight="25.0" prefWidth="264.0" text="It will light up the dark.">
+        <font>
+            <Font name="System Bold" size="15.0"/>
+        </font>
+    </Label>
 </AnchorPane>
