--- a/src/main/resources/fxml/About.fxml
+++ b/src/main/resources/fxml/About.fxml
@@ -1,19 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="200" prefWidth="300"
-            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="controllers.AboutController">
-    <Label alignment="TOP_LEFT" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="102.0" prefWidth="278.0"
-           text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;"
-           wrapText="true"/>
-    <Button fx:id="okayButton" layoutX="239.0" layoutY="161.0" mnemonicParsing="false" text="Okay"
-            onAction="#handleOkayButton"/>
-    <Label layoutX="14.0" layoutY="127.0" prefHeight="25.0" prefWidth="264.0" text="It will light up the dark.">
-        <font>
-            <Font name="System Bold" size="15.0"/>
-        </font>
-    </Label>
-</AnchorPane>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AboutController">
+    <Tab text="About your device">
+        <GridPane prefHeight="249.0" prefWidth="467.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="158.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="342.0" />
+            </columnConstraints>
+            <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <Label text="Initialized device: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label text="Espressif SDK version:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label text="Enlight Firmware version:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label text="Free RAM (bytes):" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label text="Serial number:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label text="Current WiFi:" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label text="Current IP address:" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+                <padding>
+                    <Insets right="5.0" />
+                </padding>
+            </Label>
+            <Label text="WiFi signal strength:" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+            </Label>
+            <Label fx:id="initedDevice" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="sdkVersion" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="firmwareVersion" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="freeRam" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="serialNumber" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="currentWifiSsid" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label fx:id="currentIpAddr" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label fx:id="wifiSigStrength" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+        </GridPane>
+
+    </Tab>
+    <Tab text="About this project">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <Label alignment="TOP_LEFT" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="243.0" prefWidth="475.0" text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;" wrapText="true" />
+        </AnchorPane>
+    </Tab>
+</TabPane>
