--- a/src/main/resources/fxml/Advanced.fxml
+++ b/src/main/resources/fxml/Advanced.fxml
@@ -1,15 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+    <Tab text="WiFi Settings">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <children>
+                <Label layoutX="119.0" layoutY="91.0" text="WiFi Name (SSID):" AnchorPane.leftAnchor="119.0" AnchorPane.rightAnchor="435.0" AnchorPane.topAnchor="91.0" />
+                <Label layoutX="136.0" layoutY="155.0" text="WiFi Password:" AnchorPane.leftAnchor="136.0" AnchorPane.rightAnchor="435.0" AnchorPane.topAnchor="155.0" />
+                <TextField layoutX="236.0" layoutY="87.0" prefHeight="25.0" prefWidth="282.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="132.0" AnchorPane.topAnchor="87.0" />
+                <PasswordField layoutX="236.0" layoutY="151.0" prefHeight="25.0" prefWidth="282.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="132.0" AnchorPane.topAnchor="151.0" />
+                <Button layoutX="253.0" layoutY="223.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="124.0" text="Save" AnchorPane.leftAnchor="253.0" AnchorPane.rightAnchor="273.0" AnchorPane.topAnchor="223.0" />
+            </children>
+        </AnchorPane>
+    </Tab>
+    <Tab text="Firmware upgrade">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <children>
+                <TextField layoutX="69.0" layoutY="94.0" prefHeight="25.0" prefWidth="356.0" AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="69.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="94.0" />
+                <Button layoutX="425.0" layoutY="94.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="163.0" text="Select a firmware package" AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="425.0" AnchorPane.rightAnchor="62.0" AnchorPane.topAnchor="94.0" />
+                <Button layoutX="192.0" layoutY="161.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="267.0" text="Run firmware upgrade" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="161.0" />
+            </children>
+        </AnchorPane>
+    </Tab>
     <Tab text="About your device">
         <GridPane prefHeight="249.0" prefWidth="467.0">
             <columnConstraints>
@@ -17,7 +40,6 @@
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="342.0" />
             </columnConstraints>
             <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -26,7 +48,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <Label text="Initialized device: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                 <GridPane.margin>
@@ -81,7 +104,7 @@
     </Tab>
     <Tab text="About this project">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-            <Label alignment="TOP_LEFT" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="243.0" prefWidth="475.0" text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;" wrapText="true" />
+            <Label alignment="CENTER" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="296.0" prefWidth="620.0" text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;" wrapText="true" />
         </AnchorPane>
     </Tab>
 </TabPane>
